# smacv2

./: pyproject.toml  setup.py
smacv2/env/pettingzoo/: StarCraft2PZEnv.py
