[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SMACv2"
version = "1.0.0"
description = "SMACv2 - StarCraft Multi-Agent Challenge."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "WhiRL", email = "benellis@robots.ox.ac.uk"}
]
keywords = ["StarCraft", "Multi-Agent Reinforcement Learning"]

dependencies = [
    "pysc2>=3.0.0",
    "protobuf<3.21",
    "s2clientprotocol>=4.10.1.75800.0",
    "absl-py>=0.1.0",
    "numpy>=1.10",
    "pygame>=2.0.0",
    "gymnasium>=1.2.0",
    "pettingzoo>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.0.1",
    "black>=19.10b0",
    "flake8>=3.7",
    "flake8-bugbear>=20.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smacv2*"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
